--- a/gui.css
+++ b/gui.css
@@ -2,6 +2,7 @@ div.vPSP {
     background-color: #000;
     top: 0px;
     position: fixed;
+    right: 0px;
     z-index: 99;
     /**/
     font-size: 40pt;
