--- a/gui.css
+++ b/gui.css
@@ -22,7 +22,7 @@ div.vPSP > table > tr > th {
 }
 
 div.vPSP > table > tr > td {
-    height: 20px;
+    /*height: 20px;*/
     background-color: #fff;
     border: 0px;
     margin: 0px;
